...
import UIKit

final class SettingsPresenter: SettingsPresentationLogic {
    // MARK: - Constants
    private enum Constants {
        enum LogoutAlert {
            static let title: String = "Are you sure you want to log out?"
            static let message: String = ""
            static let okTitle: String = "Logout"
            static let cancelTitle: String = "Cancel"
        }
    }
    
    // MARK: - Variables
    weak var view: SettingsViewController?
...
