...
        
        // friends view
        static let friendsTitle: String = "Friends"
        static let friendImageName: String = "person.2.fill"
        
        // settings view
        static let settingsTitle: String = "Settings"
        static let settingsImageName: String = "gear"
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
...
